<resources>
    <string name="app_name">Charades</string>
    <string name="charades">Charades</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
