<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Views.Initials.SignUpPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/topLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8sp">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charades"
                    android:textSize="48sp"/>

                <ImageView
                    android:layout_width="70sp"
                    android:layout_height="60sp"
                    android:src="@mipmap/ic_titlepic"
                    android:layout_toEndOf="@+id/titleText"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="40sp"
                android:layout_below="@+id/topLayout"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="50sp" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginText"
                android:layout_marginTop="70sp"
                android:hint="@string/email"
                android:layout_marginHorizontal="20sp"
                tools:ignore="Autofill,UnusedAttribute"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/colorBlue"/>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailText"
                android:layout_marginTop="30sp"
                android:hint="@string/password"
                android:layout_marginHorizontal="20sp"
                tools:ignore="Autofill,UnusedAttribute"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorBlue"/>

            <EditText
                android:id="@+id/confirmPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordText"
                android:layout_marginTop="30sp"
                android:hint="@string/confirm_password"
                android:layout_marginHorizontal="20sp"
                tools:ignore="Autofill,UnusedAttribute"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorBlue"/>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="150sp"
                android:layout_height="40sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/confirmPasswordText"
                android:layout_marginTop="50sp"
                android:text="@string/sign_up"
                android:background="@color/colorBlue"
                android:textColor="#FFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@+id/signupBtn"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>