<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Views.Initials.LoginPage">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8sp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charades"
            android:textSize="48sp"/>

        <ImageView
            android:layout_width="70sp"
            android:layout_height="60sp"
            android:src="@mipmap/ic_titlepic"
            android:layout_toEndOf="@+id/titleText"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:layout_below="@+id/topLayout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorBlue"
        android:layout_marginTop="50sp" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginText"
        android:layout_marginTop="70sp"
        android:hint="Email"
        android:layout_marginHorizontal="20sp"
        tools:ignore="Autofill,UnusedAttribute"
        android:textSize="18sp"
        android:inputType="text"
        android:backgroundTint="@color/colorBlue"/>

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameText"
        android:layout_marginTop="30sp"
        android:hint="@string/password"
        android:layout_marginHorizontal="20sp"
        tools:ignore="UnusedAttribute"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorBlue"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordText"
        android:layout_marginTop="50sp"
        android:text="@string/login"
        android:background="@color/colorBlue"
        android:textColor="#FFFF" />
</RelativeLayout>